[package]
name = "csviewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
csv = "1.3.0"
log = "0.4.21"
promkit = "0.3.3"
unicode-width = "0.1.11"

[dependencies.log4rs]
version = "1.3.0"
features = ["yaml_format", "file_appender", "config_parsing"]
